# dbt_olist_project

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  DOCUMENTATION_STANDARDS.md  GIT_STRATEGY.md  README.md  SQL_STYLE_GUIDE.md  catalog.json  dbt_project.yml  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  pyproject.toml  run_results.json
.github/pull_request_template/: pull_request_template.md
.github/workflows/: cleanup-ci-schema.yml  dbt-ci-cd-full.disabled  dbt-ci-cd.yml
.github/workflows_archive/: dbt-ci-cd-full.disabled
data_exports/: dim_dates.csv  dim_marketing.csv  dim_products.csv  dim_sellers.csv  fct_marketing.csv
logs/: query_log.sql
macros/: financial_metrics.sql  formatting.sql  is_non_negative.sql  round_currency.sql  surrogate_key.sql
models/audit/: README.md  current_sellers.sql  sellers_scd2_changes.sql
models/docs/: column_desciptions.md
models/exposures/: marketing_analytics_dashboard.yml  payments_insights_dashboard.yml  sales_fulfillment_dashboard.yml
models/marts/dimensions/: dim_customers.sql  dim_dates.sql  dim_marketing.sql  dim_products.sql  dim_sellers.sql  (+1 more)
models/sources/: sources.yml
models/staging/: schema.yml  stg_category_enriched.sql  stg_closed_deals.sql  stg_customers.sql  stg_geolocation.sql  stg_marketing_qualified_leads.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
seeds/: categories.csv  origin_channel_map.csv  seeds.yml  sellers.csv  sla_thresholds.csv
snapshots/: sellers_snapshot.sql
(+329 files in other folders)
