[project]
name = "dbt-olist-project"
version = "0.1.0"
description = ""
authors = [
    {name = "joelam21",email = "joelam21@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "dbt-core (>=1.10.1,<2.0.0)",
    "dbt-snowflake (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
